corpus/literals.txt
====
Boolean
====

true
false

---

(source_file (true) (false))

====
Comments
====

// Yo

true // true
1 // one

---

(source_file (comment) (true) (comment) (integer) (comment))


====
Strings
====

"Hello, Gleam!"

"Hello
Gleam"

"Here is a doublequote -> \" <-"

---

(source_file (string) (string) (string))

====
Ints 
====

1
2
-3
4001
1 + 1 
5 - 1 
5 / 2 
3 * 3 
5 % 2 

2 > 1  
2 < 1  
2 >= 1 
2 <= 1 

1_000_000

---

(source_file)

====
Floats
====

---

1.5
2.0
-0.1

1.0 +. 1.4 
5.0 -. 1.5 
5.0 /. 2.0 
3.0 *. 3.1 

2.0 >. 1.0  
2.0 <. 1.0  
2.0 >=. 1.0 
2.0 <=. 1.0 

1_000_000.0

---

(source_file)

